# cvsser

./: README.md  setup.cfg
cvss/: __init__.py  cvss_guide.json  vector.py
cvsser/: __init__.py  cvss.py
tests/: __init__.py  test_vectorstring.py  x.py
tools/: codes_gen.py  cvss_vector_string_metadata.csv  guide_gen.py
vs_cvss/: __init__.py  cvss.py  cvss_guide.py
