[metadata]
# replace with your username:
name = vs_cvss
version = 1.0.0
author = Justin Lute
author_email = jlute@vulnscape.com
description = A module for interpreting and manipulating CVSS vector strings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vulnscape/vs_cvss
project_urls =
    Bug Tracker = https://github.com/vulnscape/vs_cvss/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = vs_cvss
packages = find:
python_requires = >=3.9

[options.packages.find]
where = vs_cvss